sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value echanges
    if (plusPetit(i+1,i)){echanges(i,i+t);i-=1}
                          ^AlgGnomeSort:6: error: not found: value t
    if (plusPetit(i+1,i)){echanges(i,i+t);i-=1}
                                       ^