sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var long = getNombreValeurs()
  var i:Int= 1
  while (i < long){
    if (plusPetit(i+1,i)){echanges(i,i+t);i-=1}
    else{i+1}
  }
}